tdf#120245: Accept to insert empty field with 'not null' database constraint

See https://bugs.documentfoundation.org/show_bug.cgi?id=120245#c4

Change-Id: I9ac852a83e0a57c34ef3640bf0fb0e6a3394db63
Reviewed-on: https://gerrit.libreoffice.org/61268
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>